--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,4 +4,15 @@
 [init]
 	defaultBranch = main
 [pull]
-	rebase = true
+    rebase = false
+[commit]
+    verbose = true
+
+[pager]
+    diff = delta
+    log = delta
+    reflog = delta
+    show = delta
+
+[interactive]
+    diffFilter = delta --color-only --features=interactive
