--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,13 +1,15 @@
 [user]
 	email = proffapt@pm.me
 	name = proffapt
-	signingkey = 30DDA2CFE95AAAD4
+	signingkey = /Users/proffapt/.ssh/id_ed25519.pub
 [init]
 	defaultBranch = main
 [pull]
     rebase = false
 [commit]
     verbose = true
-	gpgsign = false
+	gpgsign = true
 [credential]
 	helper = store
+[gpg]
+	format = ssh
